cmake_minimum_required(VERSION 2.6)
include(../macros.cmake)
enable_testing()
set_variables()
set(CMAKE_INSTALL_PREFIX "/usr/local/rabbitmq-consumer" CACHE PATH "Prefix prepended to install directories.")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/../cmake")

project("RabbitMQ Consumer")

configure_file(${CMAKE_SOURCE_DIR}/consumer.c ${CMAKE_BINARY_DIR}/consumer.c)

find_package(RabbitMQ)
find_package(MySQLClient)

set(CMAKE_C_FLAGS "-Wall -fPIC")
set(CMAKE_CXX_FLAGS "-Wall -fPIC")
include_directories(${MYSQLCLIENT_HEADERS})
include_directories(${RABBITMQ_HEADERS})
include_directories(inih)
add_subdirectory(inih)
add_executable (consumer ${CMAKE_BINARY_DIR}/consumer.c)

if(MYSQLCLIENT_FOUND)
  target_link_libraries(consumer ${MYSQLCLIENT_LIBRARIES} rabbitmq inih ssl crypt crypto dl z m pthread)
elseif(MYSQLCLIENT_STATIC_FOUND)
  target_link_libraries(consumer ${MYSQLCLIENT_STATIC_LIBRARIES} rabbitmq inih ssl  crypt crypto dl z m pthread)
endif()

install(TARGETS consumer DESTINATION bin)
install(FILES consumer.cnf DESTINATION etc)

if(${CMAKE_VERSION} VERSION_LESS 2.8.12)
  message(WARNING "CMake version is ${CMAKE_VERSION}. Building of packages requires version 2.8.12 or greater.")
else()
  # See if we are on a RPM-capable or DEB-capable system
  find_program(RPMBUILD rpmbuild)
  find_program(DEBBUILD dpkg-buildpackage)
  set(CPACK_GENERATOR "TGZ")
  if(NOT ( ${RPMBUILD} STREQUAL "RPMBUILD-NOTFOUND" ) )
    message(STATUS "Generating RPM packages")
    set(CPACK_GENERATOR "${CPACK_GENERATOR};RPM")
  endif()

  if(NOT ( ${DEBBUILD} STREQUAL "DEBBUILD-NOTFOUND" ) )
    set(CPACK_GENERATOR "${CPACK_GENERATOR};DEB")
    execute_process(COMMAND dpgk --print-architecture OUTPUT_VARIABLE DEB_ARCHITECTURE)
    set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE ${DEB_ARCHITECTURE})
    set (CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON) 
    message(STATUS "Generating DEB packages for ${DEB_ARCHITECTURE}")
  endif()

  set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "RabbitMQ Consumer")
  set(CPACK_PACKAGE_VERSION_MAJOR "1")
  set(CPACK_PACKAGE_VERSION_MINOR "0")
  set(CPACK_PACKAGE_VERSION_PATCH "0")
  set(CPACK_PACKAGE_CONTACT "MariaDB Corporation Ab")
  set(CPACK_PACKAGE_FILE_NAME "rabbitmq-consumer-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
  set(CPACK_PACKAGE_NAME "rabbitmq-consumer")
  set(CPACK_PACKAGE_VENDOR "MariaDB Corporation Ab")
  set(CPACK_PACKAGING_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
  set(CPACK_RPM_PACKAGE_NAME "rabbitmq-consumer")
  set(CPACK_RPM_PACKAGE_VENDOR "MariaDB Corporation Ab")
  set(CPACK_RPM_PACKAGE_LICENSE "GPLv2")
  include(CPack)
endif()
