add_executable(testlog testlog.c)
add_executable(testorder testorder.c)
target_link_libraries(testlog pthread log_manager utils)
target_link_libraries(testorder pthread log_manager utils)
add_test(NAME Internal-TestLogOrder COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/logorder.sh  200 0 1000 ${CMAKE_CURRENT_BINARY_DIR}/logorder.log)
